cleanup unused items in api def.
